add visualizer module

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 Maps/src/data_loader/__pycache__
 Maps/src/data_base/__pycache__
 Maps/src/data_analyzer/__pycache__
+Maps/src/data_visualizer/__pycache__
 
 Maps/db/diagnostic.data
 Maps/db/journal
