--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ Maps/src/data_base/__pycache__
 Maps/src/data_analyzer/__pycache__
 Maps/src/data_visualizer/__pycache__
 
-Maps/db/diagnostic.data
-Maps/db/journal
+Maps/db
 
 Stuff/
